# gprc-tests

./: .gitignore  README.md
grpc-rust-mongo-server/: Cargo.toml
grpc-rust-mongo-server/proto/: sku.proto
grpc-rust-mongo-server/proto/google/type/: money.proto
grpc-rust-mongo-server/src/: main.rs
grpc-rust-psql-server/: Cargo.toml  build.rs
grpc-rust-psql-server/src/: main.rs
grpcclientdemo/: dependency-reduced-pom.xml  pom.xml
grpcclientdemo/src/main/java/com/gprcclientdemo/: Client.java
grpcclientdemo/src/main/proto/: sku.proto
grpcmongoserver/: .gitignore  README.md  pom.xml
grpcmongoserver/src/main/java/com/example/: GrpcMongoDbServerApplication.java
grpcmongoserver/src/main/java/com/example/config/: MongoConfig.java  OffsetDateTimeReadConverter.java  OffsetDateTimeWriteConverter.java
grpcmongoserver/src/main/java/com/example/grpcmongoserver/: GrpcmongoserverApplication.java
grpcmongoserver/src/main/java/com/example/sku/: AvailabilityType.java  GrpcSkuService.java  (+2 more)
grpcmongoserver/src/main/proto/: sku.proto
grpcmongoserver/src/main/resources/: application.properties
grpcmysqljdbcserver/: README.md  pom.xml
grpcmysqljdbcserver/src/main/java/com/example/: GrpcmysqljdbcserverApplication.java
grpcmysqljdbcserver/src/main/resources/: application.properties
grpcmysqljdbcserver/src/test/java/com/example/: GrpcmysqljdbcserverApplicationTests.java
grpcpsqljdbcserver/: README.md  pom.xml
grpcpsqljdbcserver/src/main/java/com/example/: GrpcPostgressJdbcServerApplication.java
grpcpsqljdbcserver/src/main/resources/: application.properties
(+8 files in other folders)
