[package]
name = "grpc-rust-mongo-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
mongodb = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3.0"
